# 42_ft_irc

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  Makefile  TEST_README.md  TEST_SUMMARY.md  test_output.txt
include/: Channel.hpp  Client.hpp  CommandManager.hpp  Server.hpp
include/network/: IrcReplies.hpp
src/: Channel.cpp  Client.cpp  JoinCommand.cpp  Server.cpp  main.cpp
src/commands/: CommandManager.cpp  cmd_auth.cpp  cmd_channel.cpp  cmd_mode.cpp  cmd_ops.cpp  cmd_privmsg.cpp
test/: integration_test.cpp  main_test.cpp
test/channel/: channel_test.cpp
test/client/: client_test.cpp
test/server/: server_test.cpp
